2008-10-30  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Main.cs: swtich to map file
	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: reproject extents on
	  GetFeatures

2008-10-29  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Cumberland.DrawMap.csproj: add postgis support
	* Cumberland.DrawMap/Main.cs: switch to serialized map
	* Cumberland.Data.PostGIS/PostGISFeatureSource.cs: simplify

2008-10-29  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-27  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Main.cs: remove opengl drawing

2008-10-27  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: add DeleteGlList

2008-10-26  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-25  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-24  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Drawing.OpenGL/OpenGlMapDrawer.cs: fix bug where glListed
	  layer was returning instead of continuing to next layer

2008-10-23  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Main.cs: copy improvements from Appomattox
	* Cumberland.Drawing.OpenGL/MatrixHelper.cs: switch to doubles

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs,
	  Cumberland.Data.PostGIS/PostGIS.cs: add postgis point support

2008-10-22  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.PostGIS/PostGIS.cs: add multipolygon wkt support

2008-10-20  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-20  Scott Ellington <scott.ellington@gmail.com> 

	

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/TileProvider.aspx.cs: add more layers

2008-10-17  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.DrawMap/Main.cs,